Improve String concatenation.